# http-time-api

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml
app/: main.py
deployment/certs/: generate-self-signed.sh
deployment/scripts/: build-all.sh
deployment/systemd/: time-api.service
example/docker/: docker-compose.yml
example/systemd/: time-api.env  time-api.service
src/: config.rs  error.rs  main.rs  models.rs
src/handlers/: health.rs  mod.rs  root.rs  times.rs
src/mqtt/: client.rs  health.rs  mod.rs  pps.rs
src/time/: conversion.rs  mod.rs  quality.rs
