[package]
name = "time-api"
version = "0.1.0"
edition = "2021"
authors = ["Time API Contributors"]
description = "High-performance time API with GPS PPS integration"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "timeout", "limit", "trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parsing
regex = "1.10"
url = "2.5"

# TLS (for HTTP/2 and HTTP/3)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

# HTTP/3 (QUIC)
quinn = "0.11"
h3 = "0.0.4"
h3-quinn = "0.0.5"

# MQTT (optional feature)
rumqttc = { version = "0.24", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []
mqtt = ["rumqttc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
